# elasticsearch-mcp-server

./: .env.example  README.md  es_cli.py  pyproject.toml
src/: __init__.py  server.py
src/client/: __init__.py  elasticsearch.py  exceptions.py
src/clients/: __init__.py  base.py
src/clients/common/: alias.py  client.py  cluster.py  document.py  index.py
src/tools/: __init__.py  alias.py  document.py  elasticsearch.py  index.py  register.py
